chore: update openapi config
